<?xml version="1.0" encoding="UTF-8"?>
<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>us.fatehi</groupId>
    <artifactId>schemacrawler-parent</artifactId>
    <version>17.1.6</version>
    <relativePath/>
  </parent>
  <artifactId>schemacrawler-ai-core</artifactId>
  <version>17.1.6-1</version>
  <packaging>jar</packaging>

  <name>SchemaCrawler AI - Core</name>
  <description>Integrates SchemaCrawler with AI services.</description>


  <properties>
    <java.version>21</java.version>
    <skip.signing.artifacts>true</skip.signing.artifacts>
  </properties>

  <dependencyManagement>
    <dependencies>

      <!-- SchemaCrawler library -->
      <dependency>
        <groupId>us.fatehi</groupId>
        <artifactId>schemacrawler-library-bom</artifactId>
        <version>17.1.6</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>schemacrawler</artifactId>
    </dependency>
    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>schemacrawler-scripting</artifactId>
    </dependency>
    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>schemacrawler-offline</artifactId>
    </dependency>
    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>schemacrawler-lint</artifactId>
    </dependency>

    <dependency>
      <groupId>tools.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
    </dependency>
    <dependency>
      <groupId>tools.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
    </dependency>
    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>mcp-json-schema</artifactId>
      <version>1.0.1</version>
    </dependency>

    <!-- Test dependencies -->
    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>schemacrawler-testdb</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>schemacrawler-test-utility</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>schemacrawler-commandline</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>schemacrawler-hsqldb</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>schemacrawler-sqlite</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
            </manifest>
            <manifestEntries>
              <Author>Sualeh Fatehi sualeh@hotmail.com</Author>
              <Copyright>Copyright (c) 2000-2025, Sualeh Fatehi</Copyright>
              <Website>https://www.SchemaCrawler.com</Website>
              <Automatic-Module-Name>us.fatehi.schemacrawler.ai_core</Automatic-Module-Name>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <configuration>
          <skip>false</skip>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
